gcc/testsuite/rust/rustc/ui/issues/issue-35988.rs
enum E {
    V([Box<E>]),
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

fn main() {}

